# scoreSEND

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  pyproject.toml  test_script.R
R/: CrossStudyVisualizationApp_LoadExternal.R  app_new.R  dose_tier_labels.R  get_bw_score.R  get_compile_data.R  get_doses.R  get_final_score.R  get_lb_score.R  get_liver_livertobw_score.R  get_mi_score.R  get_treatment_group.R  helper_func.R  read_domain.R  sysdata.rda
data-raw/: load_sysdata.R
man/: get_all_score.Rd  get_bw_score.Rd  get_compile_data.Rd  get_doses.Rd  get_lb_score.Rd  get_mi_score.Rd  get_study_ids_from_xpt.Rd  get_treatment_group.Rd  sendSummarizer_app.Rd
sample_data/35449/: bg.xpt  bw.xpt  cl.xpt  co.xpt  dm.xpt  ds.xpt  eg.xpt  ex.xpt  fw.xpt  lb.xpt  ma.xpt  mi.xpt  om.xpt  pc.xpt  pp.xpt  relrec.xpt  se.xpt  suppma.xpt  suppmi.xpt  ta.xpt  te.xpt  ts.xpt  tx.xpt  vs.xpt
sample_data/43066/: bw.xpt  cl.xpt  co.xpt  dm.xpt  ds.xpt  ex.xpt  lb.xpt  ma.xpt  mi.xpt  om.xpt  pc.xpt  pp.xpt  relrec.xpt  se.xpt  suppma.xpt  suppmi.xpt  ta.xpt  te.xpt  ts.xpt  tx.xpt  vs.xpt
sample_data/87497/: bg.xpt  bw.xpt  cl.xpt  co.xpt  dm.xpt  ds.xpt  ex.xpt  fw.xpt  lb.xpt  ma.xpt  mi.xpt  om.xpt  pc.xpt  pooldef.xpt  pp.xpt  relrec.xpt  se.xpt  suppma.xpt  suppmi.xpt  ta.xpt  te.xpt  ts.xpt  tx.xpt  vs.xpt
sample_data/96298/: bg.xpt  bw.xpt  cl.xpt  co.xpt  dd.xpt  dm.xpt  ds.xpt  ex.xpt  fw.xpt  ma.xpt  mi.xpt  om.xpt  pc.xpt  pooldef.xpt  pp.xpt  relrec.xpt  (+7 more)
tests/: test_all_score.py  test_bw_score.py  test_compile_data.py  test_io.py  testthat.R
(+11 files in other folders)
